--- a/scz/majadito.html
+++ b/scz/majadito.html
@@ -36,20 +36,20 @@
 <header>
 	
 	<section class = "banner"><br><H1  align="center"><p>RECETAS TIPCAS</p><p>SANTA CRUZ - BOLIVIA</p> </H1></section>
-	<section class="logo"><img src="../Recetario/img/logo.jpg" width="250" height="75">mi imagen</section>
-	<section class="login"><img src="../Recetario/img/banner.jpg" width="250" height="75"></section>
+	<section class="logo"><img src="../scz/img/logo.jpg" width="250" height="75">mi imagen</section>
+	<section class="login"><img src="../scz/img/banner.jpg" width="250" height="75"></section>
 </header>
-<nav></nav>
+<nav><li><a href="../scz/santacruz.html"><font color="white">Principal</font></a></li></nav>
 <main>
 	<aside id="izquierdo">
 	<br>MENU</br>
 	<br></br>
 	<ul>
-		<li><a href="../Recetario/majadito.html">Majadito</a></li>
-		<li><a href="../Recetario/pacumutu.html">Pacumutu</a></li>
-		<li><a href="../Recetario/sonso.html">Sonso de yuca</a></li>
-		<li><a href="../Recetario/cunape.html">Cuñape</a></li>
-		<li><a href="../Recetario/asacamba.html">Asadito camba</a></li>
+		<li><a href="../scz/majadito.html">Majadito</a></li>
+		<li><a href="../scz/pacumutu.html">Pacumutu</a></li>
+		<li><a href="../scz/sonso.html">Sonso de yuca</a></li>
+		<li><a href="../scz/cunape.html">Cuñape</a></li>
+		<li><a href="../scz/asacamba.html">Asadito camba</a></li>
 	</ul>
 	
 	
@@ -58,7 +58,7 @@
 	</aside>
 	<article>
 	<p><h2>Majadito</h2></p><br>
-	<p><img src="../Recetario/img/m.jpg" width="250" height="75"></p>
+	<p><img src="../scz/img/m.jpg" width="250" height="75"></p>
 		<p>El nombre de este plato proviene de su principal ingrediente: la carne y el sufijo diminutivo “ito”, muy presente en la jerga boliviana.
 
 En Bolivia, “Majau” significa “golpeado” o “majado“, cosa que se hace con las carnes antes de hacer el majau en un tacú o mortero de madera.
