--- a/scz/sonso.html
+++ b/scz/sonso.html
@@ -35,20 +35,20 @@
 
 <header>
 	<section class = "banner"><br><H1  align="center"><p>RECETAS TIPCAS</p><p>SANTA CRUZ - BOLIVIA</p> </H1></section>
-	<section class="logo"><img src="../Recetario/img/logo.jpg" width="250" height="75" >mi imagen</section>
-	<section class="login"><img src="../Recetario/img/banner.jpg" width="250" height="75"></section>
+	<section class="logo"><img src="../scz/img/logo.jpg" width="250" height="75" >mi imagen</section>
+	<section class="login"><img src="../scz/img/banner.jpg" width="250" height="75"></section>
 </header>
-<nav></nav>
+<nav><li><a href="../scz/santacruz.html"><font color="white">Principal</font></a></li></nav>
 <main>
 	<aside id="izquierdo">
 	<br>MENU</br>
 	<br></br>
 	<ul>
-		<li><a href="../Recetario/majadito.html">Majadito</a></li>
-		<li><a href="../Recetario/pacumutu.html">Pacumutu</a></li>
-		<li><a href="../Recetario/sonso.html">Sonso de yuca</a></li>
-		<li><a href="../Recetario/cunape.html">Cuñape</a></li>
-		<li><a href="../Recetario/asacamba.html">Asadito camba</a></li>
+		<li><a href="../scz/majadito.html">Majadito</a></li>
+		<li><a href="../scz/pacumutu.html">Pacumutu</a></li>
+		<li><a href="../scz/sonso.html">Sonso de yuca</a></li>
+		<li><a href="../scz/cunape.html">Cuñape</a></li>
+		<li><a href="../scz/asacamba.html">Asadito camba</a></li>
 	</ul>
 	
 	
@@ -57,7 +57,7 @@
 	</aside>
 	<article>
 	<p><h2>Sonso de yuca al horno</h2></p><br>
-	<p><img src="../Recetario/img/s.jpg" width="250" height="75"></p>
+	<p><img src="../scz/img/s.jpg" width="250" height="75"></p>
 		<p>
 			La yuca tiene beneficios nutricionales interesantes gracias a su alto contenido en hidratos de carbono complejos que aportan energías, ayudan a sentir saciedad y disminuir el apetito. Por su bajo contenido calórico es recomendable en dietas de adelgazamiento. Además, es muy saludable por su rico contenido de vitaminas (C y B6) y minerales (potasio y magnesio). Por otro lado, al ser un alimento fácil de digerir, su consumo está recomendado en personas que padecen transtornos y afecciones digestivas y, al no ser una fuente de gluten, es apto para el consumo de personas celíacas
 		</p><br>
