--- a/scz/pacumutu.html
+++ b/scz/pacumutu.html
@@ -36,20 +36,20 @@
 <header>
 	
 	<section class = "banner"><br><H1  align="center"><p>RECETAS TIPCAS</p><p>SANTA CRUZ - BOLIVIA</p> </H1></section>
-	<section class="logo"><img src="../Recetario/img/logo.jpg" width="250" height="75"></section>
-	<section class="login"><img src="../Recetario/img/banner.jpg" width="250" height="75"></section>
+	<section class="logo"><img src="../scz/img/logo.jpg" width="250" height="75"></section>
+	<section class="login"><img src="../scz/img/banner.jpg" width="250" height="75"></section>
 </header>
-<nav></nav>
+<nav><li><a href="../scz/santacruz.html"><font color="white">Principal</font></a></li></nav>
 <main>
 	<aside id="izquierdo">
 	<br>MENU</br>
 	<br></br>
 	<ul>
-		<li><a href="../Recetario/majadito.html">Majadito</a></li>
-		<li><a href="../Recetario/pacumutu.html">Pacumutu</a></li>
-		<li><a href="../Recetario/sonso.html">Sonso de yuca</a></li>
-		<li><a href="../Recetario/cunape.html">Cuñape</a></li>
-		<li><a href="../Recetario/asacamba.html">Asadito camba</a></li>
+		<li><a href="../scz/majadito.html">Majadito</a></li>
+		<li><a href="../scz/pacumutu.html">Pacumutu</a></li>
+		<li><a href="../scz/sonso.html">Sonso de yuca</a></li>
+		<li><a href="../scz/cunape.html">Cuñape</a></li>
+		<li><a href="../scz/asacamba.html">Asadito camba</a></li>
 	</ul>
 	
 	
@@ -59,7 +59,7 @@
 	<article>
 	<p><h2>Pacumutu</h2></p><br>
 
-	<p><img src="../Recetario/img/p.jpg" width="250" height="75"></p>
+	<p><img src="../scz/img/p.jpg" width="250" height="75"></p>
 		<p>
 			Existen más de 10 tipos del tradicional pacumuto camba,  como ser de carne de res, cerdo, pollo, ubre, tripa, jiba, etc.
 			El mas conocido es  de carne de res.
