--- a/scz/santacruz.html
+++ b/scz/santacruz.html
@@ -35,16 +35,26 @@
 
 <header>
 	<section class = "banner"><br><H1  align="center"><p>RECETAS TIPCAS</p><p>SANTA CRUZ - BOLIVIA</p> </H1></section>
-	<section class="logo"><img src="../scz/img/logo.jpg" width="250" height="75">mi imagen</section>
+	<section class="logo"><img src="../scz/img/logo.jpg" width="250" height="75" >mi imagen</section>
 	<section class="login"><img src="../scz/img/banner.jpg" width="250" height="75"></section>
 </header>
-<nav>
-	<li><a href="../scz/santacruz.html"><font color="white">Principal</font></a></li>
-</nav>
+<nav><li><a href="../scz/santacruz.html"><font color="white">Principal</font></a></li></nav>
 <main>
-	<aside id="izquierdo">
-	<br>MENU</br>
-	<br></br>
+	<aside id="izquierdo"></aside>
+	<article>
+	<p><strong><h2 align="center">Comida tipica Santa Cruz - Bolivia</h2></strong></p>
+	<p><strong><h2 align="center">Las recetas de la abuela</h2></strong></p>
+	<br>	
+	<p><img src="../scz/img/top.jpg" width="250" height="75"></p>
+		<br><p>Se tiene por referencia que desde la época anterior a la colonia, la base de la alimentación del habitante oriental fue la yuca, aunque también se consumía maíz, camote, calabazas y frijoles, además de una variedad carnes de animales, frutas silvestres y pescados.
+		<br><p>Con la llegada de los españoles se introdujo el cultivo de arroz y el de plátano incorporándose estos productos a la dieta diaria.</p>
+		<br><p>Hoy en día en Santa Cruz la carne vacuna y el churrasco es una de las comidas favoritas. Sin embargo, los platos típicos mas representativos son: el majao, locro carretero, pacumuto y la sopa de maní.</p>
+		<br><p>Los pasteles son variados y usualmente son salados y dulces, ya que se preparan con queso, yuca, choclo, arroz y guineo.</p>
+		<br><p>A continuación presentamos cinco recetas de comidas típicas para su conocimiento.</p>
+
+		</p><br>
+
+
 	<ul>
 		<li><a href="../scz/majadito.html">Majadito</a></li>
 		<li><a href="../scz/pacumutu.html">Pacumutu</a></li>
@@ -52,33 +62,8 @@
 		<li><a href="../scz/cunape.html">Cuñape</a></li>
 		<li><a href="../scz/asacamba.html">Asadito camba</a></li>
 	</ul>
-	
-	
-	
-	
-	</aside>
-	<article>
-	<p><h2>Asadito Camba</h2></p><br>
-	<p><img src="../scz/img/ac.jpg" width="250" height="75"></p>
-		<p>
-			El asadito camba es un plato típico del oriente Boliviano (Santa Cruz) es una especie de hamburguesa que se come a cualquier hora ya sea como desayuno comida o cena.
-		</p><br>
 
-<p><strong>Ingredientes</strong></p>
-<br>1/2   Kilo de carne molida
-<br>1   Huevo 
-<br>1/2   Cebolla mediana cortada fina 
-<br>1      Diente de ajo cortado fino
-<br>1/2   Kilo de yuca rayada (Si no hay yuca se puede rayar una patata, o un plátano verde )
-<br>1/2   Tasa de pan molido para darle consistencia 
-<br>pimienta y sal a gusto
-<br>
 
-<p><strong><br>Preparación</p></strong>
-<p>
-	En un recipiente echar la carne y ponerle sal y pimienta. Después mezclar la yuca la cebolla ,el huevo y el ajo y mezclar luego  echar el pan molido y mezclar. Por ultimo dar forma redonda o como quieran y freir en aceite a temperatura normal. El asadito camba se acompaña con yuca hervida y llajua
-</p>
-	
 	</article>
 	<aside id="derecho"></aside>
 </main>
