--- a/index.html
+++ b/index.html
@@ -53,12 +53,12 @@
                                 <li class="menu-item current-menu-item current_page_item"><a href="index.html">Inicio</a></li>
                                 <li class="menu-item menu-item-has-children"><a href="our-menu.html">Recetas</a>
                                     <ul class="sub-menu">
-                                        <li class="menu-item"><a href="la_paz.html">La Paz</a></li>
-                                        <li class="menu-item"><a href="potosi.html">Potosi</a></li>
-                                        <li class="menu-item"><a href="tarija.html">Tarija</a></li>
-                                        <li class="menu-item"><a href="chuquisaca.html">Chuquisaca</a></li>
-                                        <li class="menu-item"><a href="cochabamba.html">Cochabamba</a></li>
-                                        <li class="menu-item"><a href="santa_cruz.html">Santa Cruz</a></li>
+                                        <li class="menu-item"><a href="lapaz/lapaz.html">La Paz</a></li>
+                                        <li class="menu-item"><a href="potosi/potosi.html">Potosi</a></li>
+                                        <li class="menu-item"><a href="tarija/tarija.html">Tarija</a></li>
+                                        <li class="menu-item"><a href="chuquisaca/chuquisaca.html">Chuquisaca</a></li>
+                                        <li class="menu-item"><a href="cochabamba/cochabamba.html">Cochabamba</a></li>
+                                        <li class="menu-item"><a href="sczsantacruz.html">Santa Cruz</a></li>
                                         <li class="menu-item"><a href="beni/beni.html">Beni</a></li>
                                     </ul>
                                 </li>
@@ -87,7 +87,7 @@
                                         <li class="menu-item"><a href="tarija/tarija.html">Tarija</a></li>
                                         <li class="menu-item"><a href="chuquisaca/chuquisaca.html">Chuquisaca</a></li>
                                         <li class="menu-item"><a href="cochabamba/cochabamba.html">Cochabamba</a></li>
-                                        <li class="menu-item"><a href="santacruz/santacruz.html">Santa Cruz</a></li>
+                                        <li class="menu-item"><a href="scz/santacruz.html">Santa Cruz</a></li>
                                         <li class="menu-item"><a href="beni/beni.html">Beni</a></li>
                         </ul>
                     </li>
