--- a/our-menu.html
+++ b/our-menu.html
@@ -58,7 +58,7 @@
                                         <li class="menu-item"><a href="tarija/tarija.html">Tarija</a></li>
                                         <li class="menu-item"><a href="chuquisaca/chuquisaca.html">Chuquisaca</a></li>
                                         <li class="menu-item"><a href="cochabamba/cochabamba.html">Cochabamba</a></li>
-                                        <li class="menu-item"><a href="santacruz/santacruz.html">Santa Cruz</a></li>
+                                        <li class="menu-item"><a href="scz/santacruz.html">Santa Cruz</a></li>
                                         <li class="menu-item"><a href="beni/beni.html">Beni</a></li>
                                         
                                     </ul>
@@ -88,7 +88,7 @@
                                         <li class="menu-item"><a href="tarija/tarija.html">Tarija</a></li>
                                         <li class="menu-item"><a href="chuquisaca/chuquisaca.html">Chuquisaca</a></li>
                                         <li class="menu-item"><a href="cochabamba/cochabamba.html">Cochabamba</a></li>
-                                        <li class="menu-item"><a href="santacruz/santacruz.html">Santa Cruz</a></li>
+                                        <li class="menu-item"><a href="scz/santacruz.html">Santa Cruz</a></li>
                                         <li class="menu-item"><a href="beni/beni.html">Beni</a></li>
                         </ul>
                     </li>
