--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                                 <li class="menu-item menu-item-has-children"><a href="our-menu.html">Recetas</a>
                                     <ul class="sub-menu">
                                         <li class="menu-item"><a href="lapaz/lapaz.html">La Paz</a></li>
-                                        <li class="menu-item"><a href="potosi/potosi.html">Potosi</a></li>
+                                        <li class="menu-item"><a href="potosi/templates/views/potosi.hbs">Potosi</a></li>
                                         <li class="menu-item"><a href="tarija/tarija.html">Tarija</a></li>
                                         <li class="menu-item"><a href="chuquisaca/chuquisaca.html">Chuquisaca</a></li>
                                         <li class="menu-item"><a href="cochabamba/cochabamba.html">Cochabamba</a></li>
@@ -83,7 +83,7 @@
                     <li class="menu-item menu-item-has-children"><a href="our-menu.html">Recetas</a>
                         <ul class="sub-menu">
                                         <li class="menu-item"><a href="lapaz/lapaz.html">La Paz</a></li>
-                                        <li class="menu-item"><a href="potosi/potosi.html">Potosi</a></li>
+                                        <li class="menu-item"><a href="potosi/templates/views/potosi.hbs">Potosi</a></li>
                                         <li class="menu-item"><a href="tarija/tarija.html">Tarija</a></li>
                                         <li class="menu-item"><a href="chuquisaca/chuquisaca.html">Chuquisaca</a></li>
                                         <li class="menu-item"><a href="cochabamba/cochabamba.html">Cochabamba</a></li>
